saves/test/demo_full_20240802_193545/vector1/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp vector1_tb.v vector1.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
vector1_tb.v:73: $finish called at 10000 (1ps)

iverilog cmd 2 error:

